changed composer name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cms-kit vendor library jsoneditor",
+    "name": "cmskit/jsoneditor",
     "type": "library",
     "version": "0.9.0",
     "description": "",
